--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "node_modules/@angular/cli/bin/ng",
-    "start": "node_modules/@angular/cli/bin/ng serve --port $PORT",
+    "start": "node_modules/@angular/cli/bin/ng serve --port 80 --host 0.0.0.0 --disable-host-check true",
     "build": "node_modules/@angular/cli/bin/ng build",
     "test": "node_modules/@angular/cli/bin/ng test",
     "lint": "node_modules/@angular/cli/bin/ng lint",
