--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "api-ai-javascript": "https://github.com/electricbrainio/apiai-javascript-client.git",
     "bootstrap": "^3.3.7",
     "codelyzer": "~3.1.1",
     "core-js": "^2.4.1",
@@ -47,6 +48,5 @@
     "typescript": "~2.3.3",
     "zone.js": "^0.8.14"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
